--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
+    "nextjs-toploader": "^3.9.17",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
